# gop

./: .gitignore  CMakeLists.txt  README.md  contributors.txt  gop.cpp  gop.hpp
data_similify/: CMakeLists.txt
examples/: CMakeLists.txt  example.cpp  example_learned.cpp
lib/contour/: CMakeLists.txt
lib/imgproc/: CMakeLists.txt  image.cpp  image.h
lib/learning/: CMakeLists.txt  forest.h  splitcriterion.cpp
lib/proposals/: CMakeLists.txt  seed.cpp  seedfeature.h
lib/python/: dataset.cpp
lib/python/dataset/: CMakeLists.txt  berkeley.cpp  berkeley.cpp~  voc.cpp
lib/segmentation/: CMakeLists.txt
lib/util/: CMakeLists.txt  eigen.h  threading.h
matlab/: compile.m  gop_mex.cpp
src/: __init__.py  eval_baseline.py  eval_bnd.py  eval_box.py  eval_coco.py  eval_learned.py  eval_seed.py  eval_size.py  example.py  gop.py  plot_box.py  sfToForest.py  train_mask.py  train_seed.py  util.py
